Bug 521293 - kscreenlocker after saving settings breaks translation for shortcut 'Session Management -> Lock Session'
Summary: kscreenlocker after saving settings breaks translation for shortcut 'Session ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Screen locking (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-10 13:23 UTC by Sergey Katunin
Modified: 2026-06-10 19:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
How it is looks on non-english system (144.27 KB, image/jpeg)
2026-06-10 13:23 UTC, Sergey Katunin
Details
How it is looks on english system (165.83 KB, image/jpeg)
2026-06-10 13:23 UTC, Sergey Katunin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey Katunin 2026-06-10 13:23:28 UTC
Created attachment 193040 [details]
How it is looks on non-english system

DESCRIPTION

After saving settings in KCM for KScreenLocker, it breaks translation for shortcut 'Session Management -> Lock Session'.

STEPS TO REPRODUCE

1. Make sure that you have non-english locale in system.
2. Open kscreenlocker kcm module, change any setting and save.
3. Open 'shortcuts' and look at 'Session Management' category and 'Lock Session' action in it.

OBSERVED RESULT

English strings (no translations)

EXPECTED RESULT

These strings are translated according to the system's language.
Comment 1 Sergey Katunin 2026-06-10 13:23:52 UTC
Created attachment 193041 [details]
How it is looks on english system
Comment 2 Bug Janitor Service 2026-06-10 13:28:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreenlocker/-/merge_requests/328
Comment 3 Nate Graham 2026-06-10 18:47:51 UTC
Git commit 0562a6a15b49b1b2f9de9075e16584555d1b12a0 by Nate Graham, on behalf of Sergey Katunin.
Committed on 10/06/2026 at 18:47.
Pushed by ngraham into branch 'master'.

settings: fix translation for shortcut "Session Management -> Lock Session"

kscreenlocker after saving settings breaks translation for this shortcut

So, add translation domain in CMakeLists.txt, and set i18n context for
"Session Management" string
FIXED-IN: 6.7.0

M  +2    -0    settings/CMakeLists.txt
M  +1    -1    settings/kscreensaversettings.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/0562a6a15b49b1b2f9de9075e16584555d1b12a0
Comment 4 Nate Graham 2026-06-10 19:01:42 UTC
Git commit 243a4691a2ee06748caf69e34ed30e30a4cba8bf by Nate Graham.
Committed on 10/06/2026 at 18:48.
Pushed by ngraham into branch 'Plasma/6.7'.

settings: fix translation for shortcut "Session Management -> Lock Session"

kscreenlocker after saving settings breaks translation for this shortcut

So, add translation domain in CMakeLists.txt, and set i18n context for
"Session Management" string
FIXED-IN: 6.7.0


(cherry picked from commit 0562a6a15b49b1b2f9de9075e16584555d1b12a0)

9e6e116f settings: fix translation for shortcut "Session Management -> Lock Session"

Co-authored-by: Sergey Katunin <sulmpx60@yandex.ru>

M  +2    -0    settings/CMakeLists.txt
M  +1    -1    settings/kscreensaversettings.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/243a4691a2ee06748caf69e34ed30e30a4cba8bf