settings: fix translation for shortcut "Session Management -> Lock Session"

kscreenlocker after saving settings breaks translation for this shortcut

So, add translation domain in CMakeLists.txt, and set i18n context for
"Session Management" string

BUG: 521293
FIXED-IN: 6.7.0